syntax = "proto3";

option go_package = ".;mailbox";

package mailbox;
message ListMailBoxReq {
  int64 page = 1;
  int64 size = 2;
  string receiver = 3;
  string read = 4;
  string type = 5; // 0 普通 1 赠送
}
message ListMailBoxRes{
  int64 total = 1;
  repeated MailBox list = 2;

}
message MailBox{
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 receiver = 4;
  string readTime = 5;
  string readStart = 6;
  int64 read = 7;
  int64 type = 8; // 0 普通 1赠送
}
message MailBoxTotalUnReadReq{
  int64 uid = 1;
}
message MailBoxTotalUnReadRes{
  int64 num = 1;
}

service MailBoxService{

  rpc ListMailBox(ListMailBoxReq)returns(ListMailBoxRes);
  rpc CountMailBoxTotalUnRead(MailBoxTotalUnReadReq)returns(MailBoxTotalUnReadRes);
}