
syntax="proto3";

option go_package = ".;user";

package user;

message LoginRequest{
  string account=1;
  string password=2;
}

message RegRequest{
  string account=1;
  string password=2;
  string ip=3;
  string xid=4;
  string phome=5;
  string email=6;
  string clientAgent=7;
}
message RegReply{
  int32  code=1;
  string msg=2;

}
message LoginReply{
  int32  code=1;
  string msg=2;

}
service UserService{
  rpc Reg(RegRequest) returns(RegReply);
  rpc Login(LoginRequest) returns(LoginReply);
}